[gd_scene load_steps=12 format=3 uid="uid://cgfoq7eo31ul3"]

[ext_resource type="Texture2D" uid="uid://by6uuw522xtno" path="res://Assets/Sprites/Minigame Sprites/Pong/Bg.png" id="1_bd8au"]
[ext_resource type="Script" path="res://Scenes/Minigames/Pong/pong.gd" id="1_vy288"]
[ext_resource type="FontFile" uid="uid://bcomx8bxn0j1" path="res://Text/PressStart2P.ttf" id="2_ksug6"]
[ext_resource type="Script" path="res://Scenes/Minigames/Pong/player.gd" id="3_jmsjr"]
[ext_resource type="Script" path="res://Scenes/Minigames/Pong/cpu.gd" id="4_gvmpq"]
[ext_resource type="Script" path="res://Scenes/Minigames/Pong/ball.gd" id="5_w4ypr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_67rlo"]
size = Vector2(20, 140)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aqvqa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m0c05"]
size = Vector2(1152, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qvff8"]
size = Vector2(1152, 27.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f8hqg"]
size = Vector2(34, 800)

[node name="Pong" type="Node2D"]
script = ExtResource("1_vy288")

[node name="BG" type="Sprite2D" parent="."]
scale = Vector2(1, 1.23457)
texture = ExtResource("1_bd8au")
centered = false

[node name="Player" type="StaticBody2D" parent="."]
position = Vector2(50, 400)
script = ExtResource("3_jmsjr")

[node name="ColorRect" type="ColorRect" parent="Player"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -70.0
offset_right = 20.0
offset_bottom = 70.0
grow_vertical = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_67rlo")

[node name="CPU" type="StaticBody2D" parent="."]
position = Vector2(1082, 400)
script = ExtResource("4_gvmpq")

[node name="ColorRect" type="ColorRect" parent="CPU"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -70.0
offset_right = 20.0
offset_bottom = 70.0
grow_vertical = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CPU"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_67rlo")

[node name="Ball" type="CharacterBody2D" parent="."]
position = Vector2(576, 400)
collision_mask = 3
script = ExtResource("5_w4ypr")

[node name="ColorRect" type="ColorRect" parent="Ball"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -7.0
offset_top = -7.0
offset_right = 13.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
position = Vector2(3, 3)
shape = SubResource("RectangleShape2D_aqvqa")

[node name="Borders" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="Top" type="CollisionShape2D" parent="Borders"]
position = Vector2(576, -8)
shape = SubResource("RectangleShape2D_m0c05")

[node name="Bottom" type="CollisionShape2D" parent="Borders"]
position = Vector2(576, 808)
shape = SubResource("RectangleShape2D_qvff8")

[node name="ScoreLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreLeft"]
position = Vector2(0, 397.5)
shape = SubResource("RectangleShape2D_f8hqg")

[node name="ScoreRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreRight"]
position = Vector2(1160, 400)
shape = SubResource("RectangleShape2D_f8hqg")

[node name="PlayerScore" type="Label" parent="."]
offset_left = 456.0
offset_top = 40.0
offset_right = 520.0
offset_bottom = 104.0
theme_override_fonts/font = ExtResource("2_ksug6")
theme_override_font_sizes/font_size = 64
text = "0
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CPUScore" type="Label" parent="."]
offset_left = 640.0
offset_top = 40.0
offset_right = 704.0
offset_bottom = 104.0
theme_override_fonts/font = ExtResource("2_ksug6")
theme_override_font_sizes/font_size = 64
text = "0
"

[node name="BallTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="ScoreLeft" to="." method="_on_score_left_body_entered"]
[connection signal="body_entered" from="ScoreRight" to="." method="_on_score_right_body_entered"]
[connection signal="timeout" from="BallTimer" to="." method="_on_ball_timer_timeout"]
